tests/integration/errors/pact_field_decl.rsg
// TEST: compile_error
// EXPECT-ERROR: expected method
// v0.9.6 — Fields are not allowed in pact declarations; pacts define methods only

pact Named {
    name: str
}

struct Foo {
    name: str
}

fn main() {
    f := Foo { name = "test" }
}
